Minor additions to CV

--- a/index.html
+++ b/index.html
@@ -22,10 +22,19 @@
     <hr>
     <h3>Education</h3>
     <ul>
-        <li>MIT</li>
-        <li>LSU</li>
+        <li>Masschusetts Institue of Technology - BS Chemical Engineering and post graduate</li>
+        <li>Lousiana State University, Baton Rouge, LA - MBA program</li>
     </ul>
     <hr>
+    <h3>Current and Past Certifications</h3>
+    <ul>
+        <li>Microsoft Certified Professional (MCP)</li>
+        <li>Microsoft Certified Professional Developer (MCSD) - Visual Basic</li>
+        <li>Microsoft Certified Professional Developer in .NET (MSCD.NET) - C#</li>
+        <li>Microsoft Certified Trainer (MCT)</li>
+        <li>Netware Engineer</li>
+           
+    </ul>
     <h3>Skills</h3>
     <table width="30%" border="3px">
         <thead>
@@ -35,19 +44,30 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>.NET</td>
-            <td>🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>Access</td>
-            <td>🌟🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-                <td>SQL Server</td>
-            <td>🌟🌟🌟🌟</td>
-            
-        </tr>
+            <tr>
+                <td>.NET</td>
+                <td>🌟🌟🌟🌟</td>
+            </tr>
+            <tr>
+                <td>Microsof Access</td>
+                <td>🌟🌟🌟🌟🌟</td>
+            </tr>
+            <tr>
+                <td>Microsoft SQL Server</td>
+                <td>🌟🌟🌟🌟</td>
+            </tr>
+            <tr>
+                <td>HTML, CSS</td>
+                <td>🌟🌟🌟🌟</td>
+            </tr>
+            <tr>
+                <td>JavaScript</td>
+                <td>🌟🌟</td>
+            </tr>
+            <tr>
+                <td>Bootstrap</td>
+                <td>🌟🌟</td>
+            </tr>
         </tbody>
     </table>
 </body>
